2020-06-9 v1.0.1
1. chrome的通知消息默认35分钟推送一次，如果用户不设置
2. popup界面美化

2020-06-10 v20200610
1.增加缓存功能，用户设置了时间间隔和提示语后，下次打开回显在输入框