@@ -69,3 +69,6 @@ function setRestEyeNotification(interval, tip) {
 			chrome.tabs.create({url: 'https://www.baidu.com/s?ie=utf-8&wd=' + encodeURI(params.selectionText)});
 		}
 	});
+	
+	
+
