@@ -1,0 +1,63 @@
+<!DOCTYPE html > 
+<html> 
+<head> 
+<meta charset = "utf-8"/> 
+<title> 护眼小助手页面 </title>      
+<link rel="stylesheet"  href="layui.css"/>
+</head>   
+<body>      
+		<!-- <fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
+		    <legend>御风Chrome扩展  <span style="color:silver;">v20200611</span></legend>
+		  </fieldset>
+		  
+		  
+		  <div  class="layui-row" style="margin-top: 5%;">
+			  <div class="layui-col-xs2 layui-col-sm2 layui-col-md2">
+			    <div class="grid-demo-bg1" style="height: 30px;line-height: 30px;text-align: center;">图标</div>
+			  </div>
+			  <div class="layui-col-xs8 layui-col-sm8 layui-col-md8">
+			    <div class="layui-bg-red" style="height: 30px;line-height: 30px;text-align: center;">护眼小助手</div>
+			  </div>
+			  <div class="layui-col-xs2 layui-col-sm2 layui-col-md2">
+			    <div class="layui-bg-blue" style="height: 30px;line-height: 30px;text-align: center;">空白</div>
+			  </div>
+		  </div>
+		  
+		 <div  class="layui-row" style="margin-top: 5%;">
+		  		<div class="layui-col-xs2 layui-col-sm2 layui-col-md2" >
+		  			 <div class="grid-demo-bg1" style="height: 30px;line-height: 30px;text-align: center;">图标</div>
+		  		</div>
+		  		<div class="layui-col-xs8 layui-col-sm8 layui-col-md8" >
+		  			 <div class="layui-bg-red" style="height: 30px;line-height: 30px;text-align: center;">百度搜词</div>
+		  		</div>
+		  		<div class="layui-col-xs2 layui-col-sm2 layui-col-md2" >
+		  			 <div class="layui-bg-blue" style="height: 30px;line-height: 30px;text-align: center;">空白</div>
+		  		</div>
+		  </div> -->
+		  
+		  <div class="layui-form-item">
+		  	  <label class="layui-form-label">间隔(分钟):&nbsp;&nbsp;</label>
+		  	  <div class="layui-input-inline">
+		  		<input type="text" id="interval" required lay-verify="required" placeholder="35" autocomplete="off" class="layui-input">
+		  	  </div>
+		    </div>
+		    <br>
+		  <div class="layui-form-item">
+		  	<label class="layui-form-label">提示文字:&nbsp;&nbsp;</label>
+		  		<div class="layui-input-inline">
+		  			<input type="text" id="tips" required lay-verify="required" placeholder="休息一下眼睛吧!" autocomplete="off" class="layui-input">
+		  		</div>
+		  </div>
+		  
+		  <div style="margin-left:20%;">
+		  	<span>
+		  		<button type="button" id="setRemindButton" class="layui-btn layui-btn-radius layui-btn-warm layui-btn-sm">设置提醒</button>
+		  	</span>
+		  	<span style="margin-left:15%;">
+		  		<button type="button" id="removeRemindButton" class="layui-btn layui-btn-radius layui-btn-danger layui-btn-sm">取消提醒</button>
+		  	</span>
+		  </div>
+	<script src="jquery-3.1.1.min.js"></script>
+	<script src="notificationSetting.js"></script>
+ </body> 
+ </html
