@@ -1,12 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>option</title>
-</head>
-<body>
-    <h1>Options Page</h1>
-</body>
+<html>
+  <head>
+	  <title>御风 OptionsPage</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel="stylesheet" href="layui.css">
+    <style>
+  
+	   .layui-form-item{
+		   margin-bottom: 0;
+    </style>
+  </head>
+  <body>
+		  <div class="layui-form-item">
+			  <label class="layui-form-label">间隔(分钟):&nbsp;&nbsp;</label>
+			  <div class="layui-input-inline">
+				<input type="text" id="interval" required lay-verify="required" placeholder="35" autocomplete="off" class="layui-input">
+			  </div>
+		  </div>
+		  <br>
+		<div class="layui-form-item">
+			<label class="layui-form-label">提示文字:&nbsp;&nbsp;</label>
+				<div class="layui-input-inline">
+					<input type="text" id="tips" required lay-verify="required" placeholder="休息一下眼睛吧!" autocomplete="off" class="layui-input">
+				</div>
+		</div>
+
+		<div style="margin-left:20%;">
+			<span>
+				<button type="button" id="setRemindButton" class="layui-btn layui-btn-radius layui-btn-warm layui-btn-sm">设置提醒</button>
+			</span>
+			<span style="margin-left:15%;">
+				<button type="button" id="removeRemindButton" class="layui-btn layui-btn-radius layui-btn-danger layui-btn-sm">取消提醒</button>
+			</span>
+		</div>	
+    <script src="jquery-3.1.1.min.js"></script>
+    <script src="options.js"></script>
+  </body>
 </html>
