@@ -4,3 +4,8 @@
 
 2020-06-10 v20200610
 1.增加缓存功能，用户设置了时间间隔和提示语后，下次打开回显在输入框
+2.更换新的Logo
+
+2020-06-11 v20200611
+1.全面优化popup页面，把护眼助手以及百度搜词提取单独页面
+2.引入font-awsome 字体
